--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "devStart" : "nodemon app.js"
+    "devStart": "nodemon app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "ejs": "^2.6.2",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.10.5",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
