--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "express-ejs-layouts": "^2.5.0",
     "http-errors": "~1.6.3",
     "mongoose": "^5.10.5",
-    "morgan": "~1.9.1",
-    "multer": "^1.4.2"
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
